Seção 3: 57-Layouts, 58-Fluxo MVC do CRUD (Index)

--- a/app/views/layouts/adm.html.erb
+++ b/app/views/layouts/adm.html.erb
@@ -9,9 +9,10 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
+  
   <body>
-    <h1> Cabeçalho </h1>
+    <h1> Cabeçalho - Administrativo </h1>
     <%= yield %>
-    <h1> Rodapé </h1>
+    <h1> Rodapé - Administrativo </h1>
   </body>
 </html>
