--- a/app/views/coins/index.html.erb
+++ b/app/views/coins/index.html.erb
@@ -19,7 +19,7 @@
         <td><%= coin.description %></td>
         <td><%= coin.acronym %></td>
         <td><%= image_tag coin.url_image, width:25, height:25 %></td>
-        <td><%= link_to 'Mostrar', coin %></td>
+        <td><%= link_to 'Mostrar', coin_path(coin) %></td>
         <td><%= link_to 'Editar', edit_coin_path(coin) %></td>
         <td><%= link_to 'Apagar', coin, method: :delete, data: { confirm: 'Você tem certeza?' } %></td>
       </tr>
@@ -29,4 +29,4 @@
 
 <br>
 
-<%= link_to 'New Coin', new_coin_path %>
+<%= link_to 'Nova Moeda', new_coin_path %>
