Seção 3: 68, 69-Criando o Segundo CRUD, 70-Corrigindo Segundo CRUD

--- a/app/views/welcome/_menu.html.erb
+++ b/app/views/welcome/_menu.html.erb
@@ -1,11 +1,17 @@
 <ul>
     <li>
-       <h1> Partial </h1>
+       <h1> Menu (usando partial) </h1>
     </li>
     <li>
        <a href='/coins'> Cadastro de Moedas </a>
     </li>
     <li>
        <%= link_to 'Cadastro de Moedas via link_to', coins_path %>
+    </li>
+    <li>
+       <a href='/mining_types'> Cadastro de Tipos de Mineração </a>
+    </li>
+    <li>
+       <%= link_to 'Cadastro de Tipos de Mineração', mining_types_path %>
     </li>
 </ul>
