--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,8 +14,9 @@
 <p>Imprimindo a variável a: <%= ax %></p>
 <p>
 
+<p>O idioma usado nessa na aplicação é: <%= locale(I18n.locale) %> </p> 
 </p>
-<p><strong>Data de hoje:</strong> <%= data_br(Date.today) %></p>
+<p><strong>Data de hoje:</strong> <%= Date.today %></p>
 <p>
 
 </p>
