--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -13,10 +13,10 @@
 
 <p>Imprimindo a variável a: <%= ax %></p>
 <p>
-
-<p>O idioma usado nessa na aplicação é: <%= locale(I18n.locale) %> </p> 
+<p><%= I18n.t('hello') %></p>
+<p>O idioma usado nessa na aplicação é: <%= locale %> </p> 
 </p>
-<p><strong>Data de hoje:</strong> <%= Date.today %></p>
+<p><strong>Data de hoje:</strong> <%= I18n.l(Date.today) %></p>
 <p>
 
 </p>
