Seção 3: 82-Removendo o helper e usando o i18n

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,7 +14,7 @@
 <p>Imprimindo a variável a: <%= ax %></p>
 <p>
 <p><%= I18n.t('hello') %></p>
-<p>O idioma usado nessa na aplicação é: <%= locale %> </p> 
+<p>O idioma usado nessa na aplicação é: <%= t('actual_locale') %> </p> 
 </p>
 <p><strong>Data de hoje:</strong> <%= I18n.l(Date.today) %></p>
 <p>
