--- a/app/views/coins/index.html.erb
+++ b/app/views/coins/index.html.erb
@@ -1,7 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Moedas</h1>
-
+<h2> <%= cookies[:curso] %>
+<h2> <%= session[:curso] %>
 
 <table>
   <thead>
