--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,10 @@
+<p>
+  <%= link_to 'Português', root_path(locale: 'pt-BR') %>
+</p>
+<p>
+  <%= link_to 'English', '/?locale=en' %>
+</p>
+
 <h1>Seja bem vindo!</h1>
 <p>
   Luiz Lenhardt
